이벤트 생성 api 개발 - 입력값 이외에 에러발생. (createEvent test 수정, bad request test 추가)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+#spring boot가 제공하는 properties를 사용한 확장 기능 사용.
+#객체->json : serialization / json->object : deserialization
+#deserialization 을 하는데 unknown-properties(dto 에서 받을수 없는 properties) 가 있으면 실패하라
+spring.jackson.deserialization.fail-on-unknown-properties=true
