--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,10 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 logging.level.org.springframework.security=DEBUG
+
+my-app.admin-username=admin@mihakim.dev
+my-app.admin-password=admin
+my-app.user-username=user@mihakim.dev
+my-app.user-password=user
+my-app.client-id=myApp
+my-app.client-secret=pass
